# NM03-Capstone-Project

./: .gitignore  CMakeLists.txt  README.md
src/: DICOMM_loader.cpp  enhancement_filtering.cpp  main.cpp
src/include/FAST/: FAST_directives.hpp  includes.hpp
src/parallel/: main_parallel.cpp
src/sequential/: main_sequential.cpp
src/test/: export_test.cpp  test_pipeline.cpp
